Thu May 24 14:35:04 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Cache_Map_Manager_T.cpp (find): Remove extraneous () from
          'second' - leftover from ACE_Pair days.

        * tests/Cache_Map_Manager_Test.cpp: Add call to the above method.

        * THANKS: Thanks to Milind Pangarkar for the above test, and fix.

Thu May 24 07:58:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.h:
        * ace/config-win32-msvc.h:
          Documentation updates

        * ace/High_Res_Timer.inl:
          Layout changes

        * ace/High_Res_Timer.cpp:
          Use this

Thu May 24 05:56:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/MPC.cfg:
          Added XSC_ROOT

        * bin/valgrind.supp:
          Simplified this file

Mon May 21 18:05:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/INTEGRITY.ld:
          Removed this file.

Mon May 21 07:15:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for new release

Sat May 19 14:28:57 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.2 released.

Thu May 17 16:16:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ACE-INSTALL.html:

          Replaced the make flag static_libs with static_libs_only.
          Using static_libs implies that both static and shared can
          be built at the same time, which is not true in general.

Thu May 17 15:42:36 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Reactor.h: Clarified the timeout conditions on
          run_reactor_event_loop(). Thank you to Mohsin Zaidi for this
          clarification.

        * THANKS: Added Mohsin Zaidi to the Hall of Fame.

Wed May 16 17:41:21 UTC 2012  Steve Huston  <shuston@riverace.com>
