@@ -1,3 +1,15 @@
+Thu May 31 07:57:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/High_Res_Timer.h:
+        * ace/Message_Block.h:
+          Doxygen improvements
+
+        * ace/High_Res_Timer.inl:
+          Use gsf type to prevent overflow
+
+        * docs/bczar/bczar.html:
+          Added some more packages
+
 Thu May 24 14:35:04 UTC 2012  Steve Huston  <shuston@riverace.com>
 
         * ace/Cache_Map_Manager_T.cpp (find): Remove extraneous () from
